preventing H tag from wrapping

--- a/drupal/sites/all/themes/nurani/css/core.css
+++ b/drupal/sites/all/themes/nurani/css/core.css
@@ -973,8 +973,9 @@ body.front .panel-2col h2 {
 body.front .panel-2col h3 {
   margin-bottom: 1em;
   white-space: nowrap;
+  display: inline;
 }
-/* line 70, ../scss/pages/_page-front.scss */
+/* line 71, ../scss/pages/_page-front.scss */
 body.front .panel-2col h3 a {
   font-family: palatino;
   font-style: italic;
@@ -982,14 +983,14 @@ body.front .panel-2col h3 a {
   text-decoration: none;
   font-weight: lighter;
 }
-/* line 82, ../scss/pages/_page-front.scss */
+/* line 83, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-first {
   width: 54.28571%;
   float: left;
   margin-right: 2.85714%;
   display: inline;
 }
-/* line 85, ../scss/pages/_page-front.scss */
+/* line 86, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-first .view-id-nurani_discussions > .view-content > .views-row {
   background-color: #fff;
   margin-bottom: 25px;
@@ -998,7 +999,7 @@ body.front .panel-2col .panel-col-first .view-id-nurani_discussions > .view-cont
   border-top-color: #4c1313;
   height: 27em;
 }
-/* line 90, ../scss/pages/_page-front.scss */
+/* line 91, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-first .view-id-nurani_discussions .view-empty {
   background-color: #fff;
   margin-bottom: 25px;
@@ -1007,7 +1008,7 @@ body.front .panel-2col .panel-col-first .view-id-nurani_discussions .view-empty 
   border-top-color: #4c1313;
   padding: 35px;
 }
-/* line 98, ../scss/pages/_page-front.scss */
+/* line 99, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-last {
   width: 42.85714%;
   float: right;
@@ -1015,7 +1016,7 @@ body.front .panel-2col .panel-col-last {
   #margin-left: -30px;
   display: inline;
 }
-/* line 100, ../scss/pages/_page-front.scss */
+/* line 101, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-last .pane-content {
   background-color: #fff;
   margin-bottom: 25px;
@@ -1023,25 +1024,26 @@ body.front .panel-2col .panel-col-last .pane-content {
   border-top-style: solid;
   border-top-color: #005eae;
 }
-/* line 107, ../scss/pages/_page-front.scss */
+/* line 108, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row {
   clear: left;
   padding: 10px;
 }
-/* line 111, ../scss/pages/_page-front.scss */
+/* line 112, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-field-bundle {
   width: 57.89474%;
   float: left;
   margin-right: 5.26316%;
   display: inline;
+  margin-top: 2em;
 }
-/* line 114, ../scss/pages/_page-front.scss */
+/* line 116, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-field-bundle span.passage {
   display: inline-block;
   padding-right: 1em;
   font-weight: bold;
 }
-/* line 121, ../scss/pages/_page-front.scss */
+/* line 123, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments, body.front .view-nurani-discussions > .view-content .views-row .views-field-view {
   width: 36.84211%;
   float: right;
@@ -1049,11 +1051,11 @@ body.front .view-nurani-discussions > .view-content .views-row .views-field-noth
   #margin-left: -30px;
   display: inline;
 }
-/* line 125, ../scss/pages/_page-front.scss */
+/* line 127, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments {
   clear: both;
 }
-/* line 129, ../scss/pages/_page-front.scss */
+/* line 131, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing a, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments a {
   font-size: 12px;
   padding: 0.5em 1.5em;
@@ -1105,33 +1107,33 @@ body.front .view-nurani-discussions > .view-content .views-row .views-field-noth
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing a:hover, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments a:hover {
   color: #fff;
 }
-/* line 136, ../scss/pages/_page-front.scss */
+/* line 138, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions .view-meedan-discussion-participants {
   margin-top: 23px;
 }
-/* line 138, ../scss/pages/_page-front.scss */
+/* line 140, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions .view-meedan-discussion-participants > .view-content .views-row {
   display: inline-block;
   margin-right: -20px;
 }
-/* line 149, ../scss/pages/_page-front.scss */
+/* line 151, ../scss/pages/_page-front.scss */
 body.front .annotations .annotation {
   background-color: #fff;
   margin-bottom: 25px;
   margin-bottom: 2px;
   padding: 10px 25px;
 }
-/* line 154, ../scss/pages/_page-front.scss */
+/* line 156, ../scss/pages/_page-front.scss */
 body.front .annotations .annotation em {
   font-weight: bold;
 }
-/* line 158, ../scss/pages/_page-front.scss */
+/* line 160, ../scss/pages/_page-front.scss */
 body.front .annotations .annotation .contents {
   max-height: 75px;
   overflow: hidden;
   margin: 10px 0;
 }
-/* line 163, ../scss/pages/_page-front.scss */
+/* line 165, ../scss/pages/_page-front.scss */
 body.front .annotations .annotation .contents:hover {
   transition: height 2s;
   max-height: 100%;
