--- a/drupal/sites/all/themes/nurani/scss/pages/_page-front.scss
+++ b/drupal/sites/all/themes/nurani/scss/pages/_page-front.scss
@@ -67,6 +67,7 @@ h2{ margin-bottom:1em;}
   h3 {
     margin-bottom:1em;
     white-space:nowrap;
+    display:inline;
     a{
       @include bundle-typography-regular;
       color:$nurani-text-gray;
@@ -110,6 +111,7 @@ h2{ margin-bottom:1em;}
 
     .views-field-field-bundle{
       @include span-columns(6,10);
+      margin-top:2em;
   
       span.passage{
         display: inline-block;
